--- a/index.html
+++ b/index.html
@@ -15,19 +15,19 @@
     <hr>
     <div class="img">
         <a href="html.html">
-        <img src="/htmlsx.png" width="350px" height="350px" alt="logo de html">
+        <img src="htmlsx.png" width="350px" height="350px" alt="logo de html">
         </a>
     </div>
 <span class="span-html">Haz cick aqui en la imagen para saber mas</span>
 <hr>
 <div class="img">
-    <img src="/xd.png" width="350px" height="350px"  alt="Logo de css">
+    <img src="xd.png" width="350px" height="350px"  alt="Logo de css">
 </div>
 <span class="span-html">Haz click aqui en la imagen para saber mas</span>
 
 <hr>
 <div class="img">
-    <img src="/caerfd.png" width="350px" height="350px" alt="logo de git">
+    <img src="caerfd.png" width="350px" height="350px" alt="logo de git">
 </div>
 <span class="span-html">Hac clck aqui en la imagen para saber mas</span>
 
